r2/r2/public/static/css/reddit.css
/* ... */
.sidebox.gold .morelink a, .sidebox.gold .morelink a:visited {
    color:#9a7d2e;
}

.sidebox.gold .morelink:hover {
    background-position: 0 -31px;
}

.sidebox.gold .morelink:hover a {
    color:#ffffff;
    margin-top:1px;
}

.sidebox.gold .morelink .nub {
    display: none;
}

.sidebox.submit .spacer a {
    background-image: url(../submit-alien.png);  /* SPRITE */
    background-repeat:no-repeat;
}

.sidebox .subtitle {
    margin-left: 10px;
    color: dimgray;
    font-size: 110%;
}

.account-activity-box {
    text-align: center;
}

#account-activity table {
    margin: 2em 0 0 2em;
    width: 45em;
    font-size: larger;
}

#account-activity th {
    font-weight: bold;
}

#account-activity td {
    padding: .5em 0;
}

.infotable { margin-top: 5px; margin-bottom: 10px; }
.infotable .small { font-size: smaller; }
.infotable td { padding-right: 1em; }
.infotable a:hover { text-decoration: underline }
.infotable .state-button a {  background-color: #F0F0F0; color: gray; }
.infotable .bold { font-weight: bold; }
.infotable .invalid-user { background-color: pink}
.infotable .organic-vote { border: 1px solid green; }


/* used on profile pages */

.profile-attr {}
.profile-attr .label {font-weight: bold; }
.profile-attr .value {color: #404040; 
                       margin-right: 5px; }

.profile-attr .md {
    margin-left: 10px; 
    margin-top: 5px; 
    border-color: #B2B2B2 #D0D0D0 #D0D0D0 #B2B2B2;
    border-style: solid;
    border-width: 1px;
    padding: 10px; }

.profile-attr .md ul {
    float: none; 
    list-style-type: disc;
    margin-left: 15px; 
}

.profile-attr .md p { margin-top: 0px; }

.question { color: red; }
.question .yes { margin-left: 5px; margin-right: 3px; }
.question .no  { margin: 0px 3px 0px 3px; }

/* thing rendering */

.preload {
    position: absolute;
    top: -1000px;
    left: -1000px;
}

.arrow {
    margin: 2px 0px 0px 0px;
    width: 100%;
    height: 14px;
    display: block;
    cursor: pointer;
    background-position: center center;
    background-repeat: no-repeat; 
    width: 15px;
    margin-left: auto;
    margin-right: auto; 
}

.arrow.upmod { 
    background-image: url(../aupmod.gif);  /* SPRITE */
}
.arrow.downmod { 
    background-image: url(../adownmod.gif);  /* SPRITE */
}
.arrow.up { 
    background-image: url(../aupgray.gif);  /* SPRITE */
}
.arrow.down { 
    background-image: url(../adowngray.gif);  /* SPRITE */
}

.midcol {
    float: left; 
    margin-right: 4px; 
    margin-left: 7px; 
    background: transparent; 
    overflow: hidden;
}

.entry {
    overflow: hidden; 
    margin-left: 3px;
    opacity: 1;
}
.domain { color: #888; font-size:x-small; }
.domain a { color: #888 }
.domain a:hover { text-decoration: underline }

.link-note {
    background-color: white;
    color: #ff4444;
    font-size:x-small;
}

.tagline { color:#888; font-size:x-small; }
.tagline a {color: #369; text-decoration: none; }
.tagline .friend    { color: orangered }
.tagline .submitter { color: #0055df }
.tagline .moderator, .green { color: #228822 }
.tagline .admin { color: #ff0011; }
.tagline .alum { color: #BE1337; }
.tagline a.author.admin { font-weight: bold }
.tagline a:hover { text-decoration: underline }
.tagline .edited-timestamp{ cursor: default }

a.author { margin-right: 0.5em; }

.flair, .linkflairlabel {
    display: inline-block;
    margin-right: .5em;
    padding: 0 2px;
    background: #f5f5f5;
    color: #555;
    border: 1px solid #ddd;
    border-radius: 2px;
}

.collapsed .flair { display: none; }

.flair input {
    font-size: xx-small;
}

.linkflairlabel {
    font-size: x-small;
    max-width: 10em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.link .flair {
    font-size: x-small;
    margin-top: -1px;
}

.flair-settings { margin-bottom: 16px; }

.flairlist .flair-jump {
    margin-bottom: 1em;
}

.flairlist .flair-jump input[type="text"] { width:430px; }
.flair-jump button { font-size:100%; }

.flairlist.pretty-form { font-size:inherit; }

.flairlisthome, .flairlist .nextprev {
    display: inline-block;
    margin-top: 10px;
}

.flairlisthome { font-size: smaller; }

.flaircell, .flairlist .header {
    display: inline-block;
    text-align: center;
    width: 30ex;
    margin-right: 4ex;
}

.flair-entry { display: inline-block; }

.flaircell.narrow, .flairlist .header.narrow { width: 14ex; }

.flairsample-left { text-align: right !important; }
.flairsample-right { text-align: left !important; }

.flairrow .tagline {
    display: inline-block;
    margin-bottom: 8px;
    margin-left: 6px;
    text-align: left;
    width: 36ex;
}
.flairlist .flaircell input[type="text"] { width: 28ex; }
.flairrow > form button { display: none; }
.flairrow .edited button { display: inline-block; }

.flairrow .flairdeletebtn { display: inline; }
.flairrow:hover .flairdeletebtn { opacity: 1.0; }

.flairselector {
    box-shadow: 4px 4px 4px #ccc;
    font-size: x-small;
    position: absolute;
    width: 400px;
}

.flairselector img { margin: none; }

.flairselector h2 {
    background: #cee3f8;
    padding-bottom: 2px;
    margin-bottom: 3px;
    text-align: center;
}

.flairselector.drop-choices.active {
    border: 1px solid gray;
    display: block;
}

.flairselector .error { text-align: center; }
.flairselector ul {
    display: inline-block;
    max-width: 200px;
    overflow: hidden;
    vertical-align: top;
}

.flairselector .selected, .flairselector.active li {
    display: block;
    font-weight: normal;
    text-decoration: none !important;
}

.flairselector li {
    border: 1px solid white;
    cursor: pointer;
    display: block !important;
    padding-left: 4px;
}

.flairselector li a {
    color: #369 !important;
    font-weight: normal !important;
}

.flairselector li:hover { background-color: #bbb;  border: 1px solid #bbb; }
.flairselector li a:hover { text-decoration: none; }
.flairselector li.selected { border: dashed 1px black; }
/* ... */

